<resources>
    <string name="app_name">Address Book</string>
    <string name="no_contacts">No Contacts Exist!</string>
    <string name="button_add_contact">Add Contact</string>
    <string name="button_save_contact">Save Contact</string>
    <string name="menuitem_add_contact">Add Contact</string>
    <string name="menuitem_edit_contact">Edit Contact</string>
    <string name="menuitem_delete_contact">Delete Contact</string>
    <string name="address">Address</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City/State/Zip</string>
    <string name="label_name">Name:</string>
    <string name="label_email">E-Mail:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_street">Street:</string>
    <string name="label_city">City/State/Zip:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the contact</string>
    <string name="error_button">OK</string>
    <string name="error_title">Contact name is required</string>
    <string name="error_message">You must enter a contact name</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
</resources>
