<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_margin="5dp">

        <TableRow android:id="@+id/name_table_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/nameLabelTextView"
                style="@style/ContactLabelTextView"
                android:text="@string/label_name"></TextView>

            <TextView android:id="@+id/nameTextView"
                style="@style/ContactTextView"></TextView>
        </TableRow>

        <TableRow android:id="@+id/phone_table_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/phoneLabelTextView"
                style="@style/ContactLabelTextView" android:text="@string/label_phone"></TextView>

            <TextView android:id="@+id/phoneTextView" style="@style/ContactTextView"></TextView>
        </TableRow>

        <TableRow android:id="@+id/email_table_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/emailLabelTextView"
                style="@style/ContactLabelTextView" android:text="@string/label_email"></TextView>
            <TextView android:id="@+id/emailTextView" style="@style/ContactTextView"></TextView>
        </TableRow>

        <TableRow android:id="@+id/street_table_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/streetLabelTextView"
                style="@style/ContactLabelTextView" android:text="@string/label_street"></TextView>
            <TextView android:id="@+id/streetTextView" style="@style/ContactTextView"></TextView>
        </TableRow>

        <TableRow android:id="@+id/city_table_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/cityLabelTextView"
                style="@style/ContactLabelTextView" android:text="@string/label_city"></TextView>
            <TextView android:id="@+id/cityTextView" style="@style/ContactTextView"></TextView>
        </TableRow>

    </TableLayout>
</ScrollView>
